<resources>
    <string name="app_name">TeacherApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="phoneNumber">Phone number</string>
    <string name="requiredField">Required field!</string>
    <string name="login">Login</string>
    <string name="welcometext1">Welcome English learning online! Please enter your phone number to register or sign in</string>
    <string name="confirmPhone">Phone Confirmation</string>
    <string name="codeSentText">Enter the code that has been sent to your phone number</string>
    <string name="verificationCode">Code confirmation</string>
    <string name="verify">Verify</string>
    <string name="loading">Loading …</string>

    <string name="y">y</string>
    <string name="m">mon</string>
    <string name="d">d</string>
    <string name="h">h</string>
    <string name="min">min</string>
    <string name="s">sec</string>

    <string name="yesterday">Yesterday</string>
    <string name="jan">Jan</string>
    <string name="dec">Dec</string>
    <string name="nov">Nov</string>
    <string name="oct">Oct</string>
    <string name="sep">Sep</string>
    <string name="aug">Aug</string>
    <string name="july">July</string>
    <string name="june">June</string>
    <string name="may">May</string>
    <string name="apr">Apr</string>
    <string name="march">Mart</string>
    <string name="feb">Feb</string>
    <string name="ddMMyyyy">dd.MM.yyyy</string>
    <string name="today">Today</string>
    <string name="wrongCode">Wrong confirmation code</string>
    <string name="next">Next</string>
    <string name="home">Home</string>
    <string name="quiz">Quiz</string>
    <string name="chat">Chat</string>
    <string name="saved">Video</string>
    <string name="profile">Profile</string>
    <string name="welcome2">Welcome to English Online Teacher App</string>
    <string name="displayName">Display name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="learning_portal">Learning Portal</string>
    <string name="teacher_s_app">Teacher\'s App</string>
    <string name="enterLink">Enter youtube link</string>
    <string name="decription">Video Description</string>
    <string name="add_new_video">Add new video</string>
    <string name="cancello">Cancel</string>
    <string name="delete">Delete</string>
    <string name="ago">ago</string>
    <string name="chatEmpty">Chat is Empty \n Choose any teacher to ask questions</string>
    <string name="send_message_hint">Type here …</string>
    <string name="internetErrorMessage">Error loading user data and chat! Please try again!</string>
    <string name="quizzes">Quizzes</string>
    <string name="questions_">Questions</string>
    <string name="_1">1</string>
    <string name="createNewCategory">Add new quiz</string>
    <string name="quiz_name">Quiz name</string>
    <string name="add">Add</string>
    <string name="a">A)</string>
    <string name="b">B)</string>
    <string name="c">C)</string>
    <string name="d_">D)</string>
    <string name="add_new_question">Add new question</string>
    <string name="question">Question</string>
    <string name="varA">Variant A</string>
    <string name="varB">Variant B</string>
    <string name="varC">Variant C</string>
    <string name="varD">Variant D</string>
    <string name="choose_true_answer">Choose correct answer</string>
    <string name="chatsss">Chat</string>
    <string name="notes">Notes</string>
    <string name="add_new_notes">Add new notes</string>
    <string name="topic_name">Topic name</string>
    <string name="link">Link</string>
    <string name="chat_is_empty">Chat is empty</string>

</resources>