<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="120dp"
        android:background="@drawable/back_quit">

        <androidx.cardview.widget.CardView
            android:id="@+id/topButtonDialog"
            android:layout_width="42dp"
            android:layout_height="6dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            app:cardBackgroundColor="#cecece"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topButtonDialog"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="34dp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="34dp"
            android:gravity="center"
            android:text="@string/add_new_question"
            android:textColor="@color/textColorDark"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/questionTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginStart="32dp"
            android:layout_marginTop="22sp"
            android:layout_marginEnd="26sp"
            android:background="@color/transparent">

            <EditText
                android:id="@+id/questionEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/colorWhite"
                android:hint="@string/question"
                android:inputType="textPersonName"
                android:paddingStart="0dp"
                android:paddingEnd="12sp"
                android:textSize="18sp"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_below="@+id/questionTextInput"
            android:layout_marginStart="32sp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/varATextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="26sp"
            android:background="@color/transparent">

            <EditText
                android:id="@+id/varAEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/colorWhite"
                android:hint="@string/varA"
                android:inputType="textPersonName"
                android:paddingStart="0dp"
                android:paddingEnd="12sp"
                android:textSize="18sp"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_below="@+id/varATextInput"
            android:layout_marginStart="32sp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/varBTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view2"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="26sp"
            android:background="@color/transparent">

            <EditText
                android:id="@+id/varBEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/colorWhite"
                android:hint="@string/varB"
                android:inputType="textPersonName"
                android:paddingStart="0dp"
                android:paddingEnd="12sp"
                android:textSize="18sp"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_below="@+id/varBTextInput"
            android:layout_marginStart="32sp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/varCTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view3"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="26sp"
            android:background="@color/transparent">

            <EditText
                android:id="@+id/varCEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/colorWhite"
                android:hint="@string/varC"
                android:inputType="textPersonName"
                android:paddingStart="0dp"
                android:paddingEnd="12sp"
                android:textSize="18sp"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_below="@+id/varCTextInput"
            android:layout_marginStart="32sp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/varDTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view4"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="26sp"
            android:background="@color/transparent">

            <EditText
                android:id="@+id/varDEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/colorWhite"
                android:hint="@string/varD"
                android:inputType="textPersonName"
                android:paddingStart="0dp"
                android:paddingEnd="12sp"
                android:textSize="18sp"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_below="@+id/varDTextInput"
            android:layout_marginStart="32sp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/textViewChoose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view5"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12sp"
            android:layout_marginEnd="22dp"
            android:gravity="center"
            android:text="@string/choose_true_answer"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/linearAnswer"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_below="@+id/textViewChoose"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="22dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/buttonAnswerA"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/back_edit"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/a"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/buttonAnswerB"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/back_edit"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/b"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/buttonAnswerC"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/back_button_blue"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/c"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/buttonAnswerD"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/back_edit"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center"
                android:text="@string/d_"
                android:textSize="18sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:layout_below="@+id/linearAnswer"
            android:layout_marginTop="14dp"
            android:background="#cecece" />

        <TextView
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearAnswer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/add"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:layout_below="@+id/confirmButton"
            android:background="#cecece" />

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="22dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/cancello"
            android:textColor="@color/textColorDark"
            android:textSize="19sp" />

    </RelativeLayout>


</ScrollView>