<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_quit">

        <androidx.cardview.widget.CardView
            android:id="@+id/topButtonDialog"
            android:layout_width="42dp"
            android:layout_height="6dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            app:cardBackgroundColor="#cecece"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topButtonDialog"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="34dp"
            android:layout_marginTop="16sp"
            android:layout_marginEnd="34dp"
            android:gravity="center"
            android:text="@string/createNewCategory"
            android:textColor="@color/textColorDark"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/catNameTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginStart="32dp"
            android:layout_marginTop="22sp"
            android:layout_marginEnd="26sp"
            android:background="@color/transparent">

            <EditText
                android:id="@+id/catNameEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                android:background="@color/colorWhite"
                android:hint="@string/quiz_name"
                android:inputType="textPersonName"
                android:paddingStart="0dp"
                android:paddingEnd="12sp"
                android:textSize="18sp"
                tools:ignore="TextFields" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:layout_below="@+id/catNameTextInput"
            android:layout_marginStart="32sp"
            android:layout_marginEnd="24dp"
            android:background="@color/colorAccent" />

        <TextView
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="12dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/add"
            android:textColor="@color/colorPrimary"
            android:textSize="19sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.4dp"
            android:layout_below="@+id/confirmButton"
            android:background="#cecece" />

        <TextView
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="22dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/cancello"
            android:textColor="@color/textColorDark"
            android:textSize="19sp" />

    </RelativeLayout>

</RelativeLayout>